--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react-scripts": "5.0.1",
     "sass": "^1.57.1",
     "web-vitals": "^2.1.4",
+  },
+    "devDependencies": {
+    "nodemon": "^1.18.9",
     "sonarqube-scanner": "^2.7.0"
   },
   "scripts": {
